# pr-reviewer

./: README.md  pr_review_bot.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
pr_review_bot/: __init__.py
tests/: test_pr_review_bot.py
